<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome:</string>
    <string name="pa_s">País:</string>
    <string name="descri_o">Descrição</string>
    <string name="nomeText">nome</string>
    <string name="paisText">Pais</string>
    <string name="selecionar">selecionar</string>
</resources>